[FIX] Add missing color variable

--- a/customer_outstanding_statement/static/src/less/layout_statement.less
+++ b/customer_outstanding_statement/static/src/less/layout_statement.less
@@ -1,3 +1,6 @@
+@odoo-color-silver-darker: #d9d7d7;
+@gray-lighter-darker: @odoo-color-silver-darker;
+
 .table-statement {
     .amount {
         text-align: right !important;
